--- a/neural-feed-messenger/package.json
+++ b/neural-feed-messenger/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "19.0.0-rc-66855b96-20241106",
