--- a/neural-feed-messenger/package.json
+++ b/neural-feed-messenger/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
+    "next-cloudinary": "^6.16.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
