--- a/neural-feed-messenger/package.json
+++ b/neural-feed-messenger/package.json
@@ -24,7 +24,9 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-select": "^5.9.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
