--- a/neural-feed-messenger/package.json
+++ b/neural-feed-messenger/package.json
@@ -17,19 +17,24 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "next-cloudinary": "^6.16.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-select": "^5.9.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
